--- a/react-interview-questions.ipynb
+++ b/react-interview-questions.ipynb
@@ -647,7 +647,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## **Describe Flux vs MVC**\n",
+        "## **Describe Flux and MVC**\n",
         "Traditional **MVC patterns** have worked well for separating the concerns of data, UI and logic. But MVC architectures frequently encounter two main problems:\n",
         "\n",
         "- **Poorly defined data flow**: The cascading updates which occur across views often lead to a tangled web of events which is difficult to debug.\n",
